@@ -1,3 +1,4 @@
+* Suppress annoying warnings about unknown activities from the PS (dcbw)
 * Don't close GlibTCPServer sockets prematurely (dcbw)
 
 Snapshot 5212790236
